--- a/marion/cat.html
+++ b/marion/cat.html
@@ -56,39 +56,41 @@
     </div>
   </header>
   <div class="row p-t-200 m-b-150">
-    <div class="breadcrumb m-b-20" itemscope="" itemtype="http://schema.org/BreadcrumbList"><span itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="https://mapa-group.ru" itemprop="item"><span itemprop="name">Главная</span></a></span><span class="kb_sep"> / </span>
-      <span class="kb_title">О компании</span>
+    <div class="col-20 offset-2">
+      <div class="breadcrumb m-b-20" itemscope="" itemtype="http://schema.org/BreadcrumbList"><span itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="https://mapa-group.ru" itemprop="item"><span itemprop="name">Главная</span></a></span><span class="kb_sep"> / </span>
+        <span class="kb_title">О компании</span>
+      </div>
+      <h1 class="h2">КАТАЛОГ</h1>
     </div>
-    <h1 class="h2">КАТАЛОГ</h1>
   </div>
   <div class="row cat">
-    <div class="col-xl-6 offset-xl-2 col-lg-11 offset-lg-2 col-md-15 offset-md-2 col-sm-20 offset-sm-2 col-20">
+    <div class="col-xl-6 offset-xl-2 col-lg-9 offset-lg-2 col-md-15 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
       <a href="">
         <div class="cat__item">
           <span class="h5">
             Молочная промышленность
           </span>
-          <img src="" alt="">
+          <img src="img/cat/1.jpg" alt="">
         </div>
       </a>
     </div>
-    <div class="col-xl-6 offset-xl-1 col-lg-11 offset-lg-2 col-md-15 offset-md-2 col-sm-20 offset-sm-2 col-20">
+    <div class="col-xl-6 offset-xl-1 col-lg-9 offset-lg-2 col-md-15 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
       <a href="">
         <div class="cat__item">
           <span class="h5">
             Генераторы ледяной воды
           </span>
-          <img src="" alt="">
+          <img src="img/cat/1.jpg" alt="">
         </div>
       </a>
     </div>
-    <div class="col-xl-6 offset-xl-1 col-lg-11 offset-lg-2 col-md-15 offset-md-2 col-sm-20 offset-sm-2 col-20">
+    <div class="col-xl-6 offset-xl-1 col-lg-9 offset-lg-2 col-md-15 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
       <a href="">
         <div class="cat__item">
           <span class="h5">
             Пивная промышленность
           </span>
-          <img src="" alt="">
+          <img src="img/cat/1.jpg" alt="">
         </div>
       </a>
     </div>
