--- a/marion/catSm.html
+++ b/marion/catSm.html
@@ -56,7 +56,7 @@
     </div>
   </header>
   <div class="row">
-    <div class="col-xl-3 offset-xl-1 col-lg-4 offset-lg-2 d-none d-lg-block">
+    <div class="col-xl-3 offset-xl-1 col-lg-4 offset-lg-2 d-none d-lg-block p-t-200">
       <nav class="catSmMenu" >
         <ul>
           <li>
@@ -66,7 +66,7 @@
             <a href="">Предохладители молока</a>
           </li>
           <li>
-            <a href="">Пастеризация молока 
+            <a href="">Пастеризация молока
               и охлаждение</a>
           </li>
           <li>
@@ -88,41 +88,42 @@
       </nav>
     </div>
     <div class="col-xl-17 offset-xl-1 col-lg-14 offset-lg-2 col-24 offset-0">
-      <div class="row p-t-200 m-b-150">
-        <div class="breadcrumb m-b-20" itemscope="" itemtype="http://schema.org/BreadcrumbList"><span itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="https://mapa-group.ru" itemprop="item"><span itemprop="name">Главная</span></a></span><span class="kb_sep"> / </span>
-          <span class="kb_title">О компании</span>
+      <div class="row p-t-200 m-b-100">
+        <div class="col-24">
+          <div class="breadcrumb m-b-20" itemscope="" itemtype="http://schema.org/BreadcrumbList"><span itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="https://mapa-group.ru" itemprop="item"><span itemprop="name">Главная</span></a></span><span class="kb_sep"> / </span>
+            <span class="kb_title">О компании</span>
+          </div>
+          <h1 class="h2">КАТАЛОГ</h1>
         </div>
-        <h1 class="h2">КАТАЛОГ</h1>
       </div>
-      <div class="row">
+      <div class="row p-b-80">
+        <div class="col-24">
+          <h4 class="h3 ttu">Охладители молока</h4>
+        </div>
+      </div>
+      <div class="row p-b-150">
         <div class="col-xl-7 offset-xl-0 col-lg-10 offset-lg-0 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
-          <div class="cartProd">
-            <a href="#">
-              <img src="w-100" alt="">
+          <a href="#" class="cartProd">
+              <img class="w-100" src="img/cat/11.jpg" alt="">
               <span class="h4">Охладители молока открытого типа</span>
-            </a>
-          </div>
+          </a>
         </div>
         <div class="col-xl-7 offset-xl-1 col-lg-10 offset-lg-2 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
-          <div class="cartProd">
-            <a href="#">
-              <img src="w-100" alt="">
+          <a href="#" class="cartProd">
+              <img class="w-100" src="img/cat/11.jpg" alt="">
               <span class="h4">Охладители молока закрытого типа</span>
-            </a>
-          </div>
+          </a>
         </div>
-        <div class="col-xl-7 offset-xl-1 col-lg-10 offset-lg-2 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
-          <div class="cartProd">
-            <a href="#">
-              <img src="w-100" alt="">
+        <div class="col-xl-7 offset-xl-1 col-lg-10 offset-lg-0 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
+          <a href="#" class="cartProd">
+              <img class="w-100" src="img/cat/11.jpg" alt="">
               <span class="h4">Охладители типа "ванна"</span>
-            </a>
-          </div>
+          </a>
         </div>
       </div>
     </div>
   </div>
-  
+
 
 
 
