--- a/marion/det.html
+++ b/marion/det.html
@@ -56,12 +56,12 @@
     </div>
   </header>
   <section class="detTitle">
-    <div class="row">
+    <div class="row p-t-200">
       <div class="col-xl-9 offset-xl-2 col-lg-9 offset-lg-2 col-md-20 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 p-b-80">
         <div class="breadcrumb m-b-20" itemscope="" itemtype="http://schema.org/BreadcrumbList"><span itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="https://mapa-group.ru" itemprop="item"><span itemprop="name">Главная</span></a></span><span class="kb_sep"> / </span>
           <span class="kb_title">О компании</span>
         </div>
-        <h1 class="h2 m-b-80">КАТАЛОГ</h1>
+        <h1 class="h2 ttu m-b-80">Охладители молока открытого типа</h1>
 
         <div class="d-none d-lg-block">
           <h4 class="h3 p-b-40">описание</h4>
@@ -71,7 +71,9 @@
         </div>
       </div>
       <div class="col-xl-11 offset-xl-2 col-lg-11 offset-lg-2 col-md-24 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0">
-        <img src="" alt="" class="w-100">
+        <div class="detTitle__imgW">
+          <img src="" alt="">
+        </div>
         <div class="lent lent_orange">
           <span class="h3">
             Молочная промышленность&nbsp;&nbsp;&nbsp;&nbsp;Генераторы ледяной воды&nbsp;&nbsp;&nbsp;&nbsp;Пивная промышленность&nbsp;&nbsp;&nbsp;&nbsp;кондитерская промышленность&nbsp;&nbsp;&nbsp;&nbsp;Молочная промышленность&nbsp;&nbsp;&nbsp;&nbsp;Генераторы ледяной воды&nbsp;&nbsp;&nbsp;&nbsp;Пивная промышленность&nbsp;&nbsp;&nbsp;&nbsp;кондитерская промышленность&nbsp;&nbsp;&nbsp;&nbsp;
@@ -145,7 +147,7 @@
             <p class="p1">наличие</p>
           </div>
         </div>
-        
+
       </div>
     </div>
   </div>
