--- a/marion/index.html
+++ b/marion/index.html
@@ -21,14 +21,14 @@
         </a>
       </div>
       <div class="col-xl-16 offset-xl-2 col-lg-16 offset-lg-2 col-md-2 offset-md-17 col-sm-3 offset-sm-15 col-3 offset-15">
-        <div class="d-md-none">
+        <div class="d-lg-none">
           <svg width="28" height="14" viewBox="0 0 28 14" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect width="28" height="2" fill="#F9F9F9"/>
             <rect x="9" y="6" width="19" height="2" fill="#F9F9F9"/>
             <rect y="12" width="28" height="2" fill="#F9F9F9"/>
           </svg>
         </div>
-        <div class="d-none d-md-block">
+        <div class="d-none d-lg-block">
           <nav class="menuHead">
             <ul>
               <li>
@@ -96,7 +96,7 @@
               <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.8434 17.7873L0.65523 17.7873L0.655228 0.459761L3.5765 0.459871L3.57666 14.8681L14.7786 14.8681L9.36002 9.47602L12.965 9.47602L20.0071 16.2124L13.2136 23.3142L9.53418 23.3374L14.8434 17.7873Z" fill="#FF511C"/>
               </svg>
-              <span class="h4">вся продукция</span> 
+              <span class="h4">вся продукция</span>
             </a>
           </div>
           <a href="#" class="frontCatalog__cartProd">
@@ -141,7 +141,7 @@
         <h4 class="h3 ttu p-b-40">Автоматизация технологических процессов</h4>
 
         <div class="d-lg-none d-md-block d-none">
-          <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг 
+          <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг
             с другом. В подавляющем большинстве современного технологического оборудования применяется, как минимум не глубокая локальная автоматизация, избавляющая оператора от однообразной монотонной работы и позволяющая облегчить труд и снизить влияние человеческого фактора.</p>
           <a href="" class="p1 ttu">подробнее</a>
         </div>
@@ -153,7 +153,7 @@
         </div>
       </div>
       <div class="col-xl-8 offset-xl-1 col-lg-8 offset-lg-1 col-md-8 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 d-block d-md-none d-lg-block">
-        <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг 
+        <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг
           с другом. В подавляющем большинстве современного технологического оборудования применяется, как минимум не глубокая локальная автоматизация, избавляющая оператора от однообразной монотонной работы и позволяющая облегчить труд и снизить влияние человеческого фактора.</p>
         <a href="" class="p1 ttu">подробнее</a>
       </div>
@@ -166,7 +166,7 @@
         <h4 class="h3 ttu p-b-40">Автоматизация технологических процессов</h4>
 
         <div class="d-lg-none d-md-block d-none">
-          <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг 
+          <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг
             с другом. В подавляющем большинстве современного технологического оборудования применяется, как минимум не глубокая локальная автоматизация, избавляющая оператора от однообразной монотонной работы и позволяющая облегчить труд и снизить влияние человеческого фактора.</p>
           <a href="" class="p1 ttu">подробнее</a>
         </div>
@@ -178,7 +178,7 @@
         </div>
       </div>
       <div class="col-xl-8 offset-xl-1 col-lg-8 offset-lg-1 col-md-8 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 d-block d-md-none d-lg-block">
-        <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг 
+        <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг
           с другом. В подавляющем большинстве современного технологического оборудования применяется, как минимум не глубокая локальная автоматизация, избавляющая оператора от однообразной монотонной работы и позволяющая облегчить труд и снизить влияние человеческого фактора.</p>
         <a href="" class="p1 ttu">подробнее</a>
       </div>
@@ -191,7 +191,7 @@
         <h4 class="h3 ttu p-b-40">Автоматизация технологических процессов</h4>
 
         <div class="d-lg-none d-md-block d-none">
-          <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг 
+          <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг
             с другом. В подавляющем большинстве современного технологического оборудования применяется, как минимум не глубокая локальная автоматизация, избавляющая оператора от однообразной монотонной работы и позволяющая облегчить труд и снизить влияние человеческого фактора.</p>
           <a href="" class="p1 ttu">подробнее</a>
         </div>
@@ -203,7 +203,7 @@
         </div>
       </div>
       <div class="col-xl-8 offset-xl-1 col-lg-8 offset-lg-1 col-md-8 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 d-block d-md-none d-lg-block">
-        <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг 
+        <p class="p1 p-b-40">Автоматизация технологических процессов и научно-технический прогресс неразрывно связаны друг
           с другом. В подавляющем большинстве современного технологического оборудования применяется, как минимум не глубокая локальная автоматизация, избавляющая оператора от однообразной монотонной работы и позволяющая облегчить труд и снизить влияние человеческого фактора.</p>
         <a href="" class="p1 ttu">подробнее</a>
       </div>
@@ -229,74 +229,66 @@
       </div>
     </div>
   </section>
-  <section class="frontProd" >
+  <section class="frontProd p-t-200" >
     <div class="row">
       <div class="col-20 offset-2">
         <h2 class="h2 p-b-150">Производство</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-xl-12 col-lg-9 d-none d-lg-block">
-        <img class="frontProd__img" src="" alt="">
+      <div class="col-xl-12 col-lg-9 col-24">
+        <div class="frontProd__imgW">
+          <img class="" src="" alt="">
+        </div>
       </div>
       <div class="col-xl-9 offset-xl-1 col-lg-11 offset-lg-2 col-20 offset-2">
         <div class="frontProd__wrap">
-          <div class="frontProd__item">
-            <a href="">
+          <a href="#" class="frontProd__item">
               <span class="h4">Производство оборудования для пищевой промышленности</span>
               <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.8434 17.7873L0.65523 17.7873L0.655228 0.459761L3.5765 0.459871L3.57666 14.8681L14.7786 14.8681L11 11.5L12.965 9.47602L20.0071 16.2124L12.965 23.5L11 21.5L14.8434 17.7873Z" fill="white"/>
-              </svg>                
-            </a>
-          </div>
-          <div class="frontProd__item">
-            <a href="">
+              </svg>
+          </a>
+          <a href="#" class="frontProd__item">
               <span class="h4">Производство оборудования для пищевой промышленности</span>
               <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.8434 17.7873L0.65523 17.7873L0.655228 0.459761L3.5765 0.459871L3.57666 14.8681L14.7786 14.8681L11 11.5L12.965 9.47602L20.0071 16.2124L12.965 23.5L11 21.5L14.8434 17.7873Z" fill="white"/>
-              </svg>                
-            </a>
-          </div>
-          <div class="frontProd__item">
-            <a href="">
+              </svg>
+          </a>
+          <a href="#" class="frontProd__item">
               <span class="h4">Производство оборудования для пищевой промышленности</span>
               <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.8434 17.7873L0.65523 17.7873L0.655228 0.459761L3.5765 0.459871L3.57666 14.8681L14.7786 14.8681L11 11.5L12.965 9.47602L20.0071 16.2124L12.965 23.5L11 21.5L14.8434 17.7873Z" fill="white"/>
-              </svg>                
-            </a>
-          </div>
-          <div class="frontProd__item">
-            <a href="">
+              </svg>
+          </a>
+          <a href="" class="frontProd__item">
               <span class="h4">Производство оборудования для пищевой промышленности</span>
               <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.8434 17.7873L0.65523 17.7873L0.655228 0.459761L3.5765 0.459871L3.57666 14.8681L14.7786 14.8681L11 11.5L12.965 9.47602L20.0071 16.2124L12.965 23.5L11 21.5L14.8434 17.7873Z" fill="white"/>
-              </svg>                
-            </a>
-          </div>
-          <div class="frontProd__item">
-            <a href="">
+              </svg>
+          </a>
+          <a href="" class="frontProd__item">
               <span class="h4">Производство оборудования для пищевой промышленности</span>
               <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.8434 17.7873L0.65523 17.7873L0.655228 0.459761L3.5765 0.459871L3.57666 14.8681L14.7786 14.8681L11 11.5L12.965 9.47602L20.0071 16.2124L12.965 23.5L11 21.5L14.8434 17.7873Z" fill="white"/>
-              </svg>                
-            </a>
-          </div>
+              </svg>
+          </a>
         </div>
       </div>
     </div>
   </section>
   <section class="frontForm">
-    <div class="lent lent_orange">
+    <div class="lent lent_white">
       <span class="h3">
         Молочная промышленность&nbsp;&nbsp;&nbsp;&nbsp;Генераторы ледяной воды&nbsp;&nbsp;&nbsp;&nbsp;Пивная промышленность&nbsp;&nbsp;&nbsp;&nbsp;кондитерская промышленность&nbsp;&nbsp;&nbsp;&nbsp;Молочная промышленность&nbsp;&nbsp;&nbsp;&nbsp;Генераторы ледяной воды&nbsp;&nbsp;&nbsp;&nbsp;Пивная промышленность&nbsp;&nbsp;&nbsp;&nbsp;кондитерская промышленность&nbsp;&nbsp;&nbsp;&nbsp;
       </span>
     </div>
-    <div class="row">
+    <div class="row p-t-100 m-b-80">
       <div class="col-xl-10 offset-xl-2 col-lg-12 offset-lg-2 col-md-20 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
         <h2 class="h2">ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ СПЕЦИАЛИСТА</h2>
       </div>
     </div>
-    <div class="form">
+    <div class="form p-b-150">
       <div class="row">
         <div class="col-xl-8 offset-xl-2 col-lg-9 offset-lg-2 col-md-20 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
           <input placeholder="Имя" type="text">
@@ -306,15 +298,15 @@
           <input placeholder="Имя" type="text">
           <input placeholder="Email" type="text">
         </div>
-        <div class="col-xl-4 offset-xl-17 col-lg-6 offset-lg-16 col-md-10 offset-md-12 col-sm-20 offset-sm-2 col-20 offset-2">
-          <div class="btn2">Отправить</div>
+        <div class="col-xl-4 offset-xl-17 col-lg-5 offset-lg-17 col-md-8 offset-md-14 col-sm-20 offset-sm-2 col-20 offset-2">
+          <div class="btn2 h4">Отправить</div>
         </div>
       </div>
     </div>
   </section>
   <footer class="footer p-t-80 p-b-80">
     <div class="row">
-      <div class="col-xl-4 offset-xl-2 col-lg-5 offset-lg-2 col-md-8 offset-md-12 col-sm-16 offset-sm-2 col-16 offset-2">
+      <div class="col-xl-4 offset-xl-2 col-lg-5 offset-lg-2 col-md-8 offset-md-2 col-sm-16 offset-sm-2 col-16 offset-2">
         <svg class="footer__logo" width="240" height="46" viewBox="0 0 240 46" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M68.9111 5.13897C69.4917 5.2551 69.9176 5.46801 70.1886 5.77771C70.4692 6.0874 70.6095 6.65356 70.6095 7.47618C70.6095 8.2988 70.3773 8.97625 69.9127 9.50854C69.4579 10.0408 68.7078 10.307 67.6626 10.307H61.2026C60.08 10.307 59.267 10.0844 58.7638 9.63919C58.2702 9.18433 58.0234 8.48752 58.0234 7.54876V7.24391C58.0234 7.07938 58.1057 6.99712 58.2702 6.99712H59.9977C60.1526 6.99712 60.23 7.07938 60.23 7.24391C60.23 7.65038 60.3123 7.93588 60.4768 8.1004C60.6413 8.26493 60.8833 8.34719 61.2026 8.34719H67.5465C67.8078 8.34719 68.0159 8.26977 68.1707 8.11492C68.3256 7.9504 68.403 7.73748 68.403 7.47618C68.403 7.18584 68.3981 6.98744 68.3885 6.88099C68.3788 6.76485 68.3401 6.62452 68.2723 6.46C68.2046 6.29547 68.0788 6.18418 67.8949 6.12611C67.7207 6.06804 67.4836 6.03901 67.1836 6.03901H61.2317C61.0478 6.03901 60.9558 5.94707 60.9558 5.76319V4.34054C60.9558 4.16634 61.0478 4.07924 61.2317 4.07924H67.1836C67.3578 4.07924 67.5078 4.06956 67.6336 4.0502C67.7691 4.03085 67.8755 3.99213 67.953 3.93407C68.0304 3.86632 68.0933 3.81309 68.1417 3.77438C68.1901 3.73567 68.2239 3.66309 68.2433 3.55663C68.2627 3.45017 68.2723 3.37759 68.2723 3.33888C68.282 3.30016 68.282 3.21306 68.2723 3.07757C68.2723 2.94208 68.2723 2.85982 68.2723 2.83079C68.2723 2.56948 68.1901 2.36141 68.0255 2.20656C67.861 2.04204 67.6481 1.95977 67.3868 1.95977H61.3188C60.9994 1.95977 60.7574 2.04204 60.5929 2.20656C60.4284 2.37109 60.3461 2.65658 60.3461 3.06306C60.3461 3.22758 60.2687 3.30984 60.1139 3.30984H58.3864C58.2218 3.30984 58.1396 3.22758 58.1396 3.06306V2.7582C58.1396 1.81944 58.3864 1.12748 58.8799 0.682292C59.3832 0.227431 60.1961 0 61.3188 0H67.5029C68.5482 0 69.303 0.266142 69.7676 0.798427C70.2418 1.33071 70.4789 2.00816 70.4789 2.83079C70.4789 3.53727 70.3531 4.04052 70.1015 4.34054C69.8595 4.64055 69.4627 4.84863 68.9111 4.96476V5.13897Z" fill="#F0F0F0"/>
           <path d="M87.6237 9.92953C87.6818 10.0263 87.6963 10.1037 87.6673 10.1618C87.6383 10.2102 87.585 10.2344 87.5076 10.2344H85.3446C85.2188 10.2344 85.1027 10.1473 84.9962 9.97308L84.1252 8.62301H76.1119L75.2409 9.97308C75.1344 10.1473 75.0231 10.2344 74.907 10.2344H72.7295C72.652 10.2344 72.5988 10.2102 72.5698 10.1618C72.5407 10.1037 72.5553 10.0263 72.6133 9.92953L78.8265 0.304854C78.9233 0.150008 79.0298 0.0725842 79.1459 0.0725842H81.0912C81.217 0.0725842 81.3283 0.150008 81.4251 0.304854L87.6237 9.92953ZM77.3749 6.64872H82.8622L80.2202 2.52593H80.0314L77.3749 6.64872Z" fill="#F0F0F0"/>
@@ -347,27 +339,29 @@
           <path d="M29.6891 45.5127C28.2769 45.5127 27.21 45.0693 26.4885 44.1826C25.767 43.2959 25.4062 42.049 25.4062 40.4419V30.9653C25.4062 29.3582 25.767 28.1113 26.4885 27.2246C27.21 26.3379 28.2769 25.8945 29.6891 25.8945H41.9161C43.3284 25.8945 44.3953 26.3379 45.1168 27.2246C45.8383 28.1113 46.199 29.3582 46.199 30.9653V40.4419C46.199 42.049 45.8383 43.2959 45.1168 44.1826C44.3953 45.0693 43.3284 45.5127 41.9161 45.5127H29.6891ZM30.5411 41.6611H41.0641C42.0466 41.6611 42.5378 41.1531 42.5378 40.1371V31.2701C42.5378 30.2541 42.0466 29.7461 41.0641 29.7461H30.5411C29.5587 29.7461 29.0674 30.2541 29.0674 31.2701V40.1371C29.0674 41.1531 29.5587 41.6611 30.5411 41.6611Z" fill="#F0F0F0"/>
         </svg>
       </div>
-      <div class="col-xl-10 offset-xl-6 col-lg-12 offset-lg-3 col-md-20 offset-md-12 col-sm-20 offset-sm-2 col-20 offset-2">
-        <nav class="footer__menu" >
-          <ul>
-            <li><a href="">О КОМПАНИИ</a></li>
-            <li><a href="">УСЛУГИ</a></li>
-            <li><a href="">ПРОИЗВОДСТВО</a></li>
-          </ul>
-        </nav>
-        <nav class="footer__menu" >
-          <ul>
-            <li><a href="">ПОРТФОЛИО</a></li>
-            <li><a href="">КОНТАКТЫ</a></li>
-            <li><a href="">КАТАЛОГ</a></li>
-          </ul>
-        </nav>
-        <div class="footer__menu" >
-          <ul>
-            <li><a href="mailto:marionn@yandex.ru">marionn@yandex.ru</a></li>
-            <li><a href="tel:+78124480878">+7 (812) 448-08-78</a></li>
-            <li><a href="">Сайт сделан в AVA</a></li>
-          </ul>
+      <div class="col-xl-10 offset-xl-6 col-lg-12 offset-lg-3 col-md-20 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
+        <div class="footer__menuWrap">
+          <nav class="footer__menu" >
+            <ul>
+              <li><a href="">О КОМПАНИИ</a></li>
+              <li><a href="">УСЛУГИ</a></li>
+              <li><a href="">ПРОИЗВОДСТВО</a></li>
+            </ul>
+          </nav>
+          <nav class="footer__menu" >
+            <ul>
+              <li><a href="">ПОРТФОЛИО</a></li>
+              <li><a href="">КОНТАКТЫ</a></li>
+              <li><a href="">КАТАЛОГ</a></li>
+            </ul>
+          </nav>
+          <div class="footer__menu" >
+            <ul>
+              <li><a href="mailto:marionn@yandex.ru">marionn@yandex.ru</a></li>
+              <li><a href="tel:+78124480878">+7 (812) 448-08-78</a></li>
+              <li><a href="">Сайт сделан в AVA</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
