--- a/marion/prod.html
+++ b/marion/prod.html
@@ -60,39 +60,41 @@
       <div class="col-20 offset-2 ">
         <h1 class="h2">ПРОИЗВОДСТВО</h1>
       </div>
-      <div class="row p-b-80">
-        <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-2 col-md-2 offset-md-16 col-sm-20 offset-sm-2 col-20 offset-2">
-          <h4 class="h3">Производство оборудования для пищевой промышленности</h4>
-        </div>
+    </div>
+    <div class="row p-b-80">
+      <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-2 col-md-20 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
+        <h4 class="h3 ttu">Производство оборудования для пищевой промышленности</h4>
       </div>
-      <div class="row">
-        <div class="col-xl-5 offset-xl-2 col-lg-6 offset-lg-2 d-none d-lg-block">
-          <img src="" alt="" class="w-100 prodFirst__img1">
-        </div>
-        <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-2 col-md-2 offset-md-16 col-sm-20 offset-sm-2 col-20 offset-2">
-          <img src="" alt="" class="w-100 prodFirst__img2">
-        </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-5 offset-xl-2 col-lg-6 offset-lg-2 d-none d-lg-block">
+        <img src="img/prod/1.jpg" alt="" class="w-100 prodFirst__img1">
       </div>
-      <div class="row">
-        <div class="col-xl-6 offset-xl-9 col-lg-6 offset-lg-9 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 p-b-20">
-          <p class="p1">Компания «ЗПО» производит оборудование для пищевой промышленности. Мы разрабатываем, собираем и делаем монтаж промышленных линий Санкт-Петербурге, гарантируя качественный результат.</p>
-        </div>
-        <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 p-b-20">
-          <p class="p1">Для производства используются надежные комплектующие, экологичные материалы, инновационные технические решения, которые обеспечивают долгий срок службы.</p>
-        </div>
+      <div class="col-xl-13 offset-xl-2 col-lg-12 offset-lg-2 col-md-20 offset-md-2 col-sm-24 offset-sm-0 col-24 offset-0">
+        <img src="img/prod/2.jpg" alt="" class="w-100 prodFirst__img2 m-b-80">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-6 offset-xl-9 col-lg-6 offset-lg-10 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 p-b-20">
+        <p class="p1">Компания «ЗПО» производит оборудование для пищевой промышленности. Мы разрабатываем, собираем и делаем монтаж промышленных линий Санкт-Петербурге, гарантируя качественный результат.</p>
+      </div>
+      <div class="col-xl-6 offset-xl-1 col-lg-5 offset-lg-1 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 p-b-20">
+        <p class="p1">Для производства используются надежные комплектующие, экологичные материалы, инновационные технические решения, которые обеспечивают долгий срок службы.</p>
       </div>
     </div>
   </section>
   <section class="prodType p-t-150">
     <div class="row m-b-80">
-      <div class="col-xl-9 offset-xl-2 col-lg-12 offset-lg-2 col-md-2 offset-md-16 col-sm-20 offset-sm-2 col-20 offset-2">
+      <div class="col-xl-9 offset-xl-2 col-lg-12 offset-lg-2 col-md-20 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
         <h2 class="h3 m-b-40">Виды промышленного оборудования</h2>
-        <p class="p1">Наша компания использует собственные разработки для производства оборудования для пищевого производства. Благодаря этому упрощается санитарная обработка и техническое обслуживание машин, комплектующих, участвующих 
+        <p class="p1">Наша компания использует собственные разработки для производства оборудования для пищевого производства. Благодаря этому упрощается санитарная обработка и техническое обслуживание машин, комплектующих, участвующих
           в переработке, приготовлении, фасовки продуктов. </p>
       </div>
     </div>
     <div class="row">
-        <div class="col-xl-4 offset-xl-2 col-lg-5 offset-lg-2 col-md-9 offset-md-2 col-sm-17 offset-sm-2 col-17 offset-2"></div>
+        <div class="col-xl-4 offset-xl-2 col-lg-5 offset-lg-2 col-md-9 offset-md-2 col-sm-17 offset-sm-2 col-17 offset-2 m-b-40">
+          <h5 class="p1 ttu">Мы производим:</h5>
+        </div>
         <div class="col-24"></div>
         <div class="col-xl-4 offset-xl-2 col-lg-5 offset-lg-2 col-md-9 offset-md-2 col-sm-17 offset-sm-2 col-17 offset-2">
           <p class="p1 d-block">01.</p>
@@ -121,9 +123,9 @@
           <p class="p1 d-block">06.</p>
           <p class="p1 d-block">Линии для обработки, переработки, приготовления рыбной продукции.</p>
         </div>
-        <div class="col-24"></div>
+        <div class="col-24 m-b-80"></div>
         <div class="col-xl-11 col-lg-14 col-24">
-          <img src="" alt="" class="prodType__img1">
+          <img src="img/prod/3.jpg" alt="" class="w-100 prodType__img1">
         </div>
     </div>
   </section>
@@ -137,11 +139,13 @@
       </div>
     </div>
     <div class="row">
-      <img src="" alt="" class="prodWhy__img">
+      <div class=" col-lg-20 offset-lg-2 col-24">
+        <img src="img/prod/4.jpg" alt="" class="w-100 prodWhy__img">
+      </div>
     </div>
-    <div class="row">
+    <div class="row m-t-80">
       <div class="col-xl-8 offset-xl-2 col-lg-8 offset-lg-2 col-md-9 offset-md-2 col-sm-17 offset-sm-2 col-17 offset-2 p-b-40">
-        <h4 class="p1 ttu">Преимущества:</h4>
+        <h4 class="p1 ttu">Преимущества: </h4>
       </div>
     </div>
     <div class="row">
@@ -152,7 +156,7 @@
       </div>
       <div class="col-xl-5 offset-xl-2 col-lg-5 offset-lg-2 col-md-9 offset-md-2 col-sm-17 offset-sm-2 col-17 offset-2 p-b-40">
         <div class="prodWhy__item">
-          <p class="p1">Для производства используются качественные запчасти, материалы, которые не взаимодействуют с продуктами. 
+          <p class="p1">Для производства используются качественные запчасти, материалы, которые не взаимодействуют с продуктами.
             Это позволяет сохранить вкусовые и органолептические свойства продуктов;</p>
         </div>
       </div>
@@ -179,7 +183,7 @@
     </div>
   </section>
 
-  <section class="prodInd">
+  <section class="prodInd p-b-150">
     <div class="row p-b-40">
       <div class="col-xl-8 offset-xl-2 col-lg-8 offset-lg-2 col-md-9 offset-md-2 col-sm-17 offset-sm-2 col-17 offset-2 ">
         <h2 class="h3">Под заказ</h2>
@@ -190,7 +194,7 @@
         <p class="p1">Пищевое производство – процесс, состоящий из нескольких этапов. Для каждого нужно использовать разные типы оборудования, включая нестандартные. Мы производим такие решения на заказ, учитывая требования к эксплуатации.</p>
       </div>
       <div class="col-xl-7 offset-xl-4 col-lg-9 offset-lg-7 col-md-9 offset-md-2 col-sm-17 offset-sm-2 col-20 offset-2">
-        <ul>
+        <ul class="prodInd__list" >
           <li>
             Приготовление продуктов будет занимать меньше времени;
           </li>
@@ -213,35 +217,44 @@
         <h2 class="h3">Изготовление нестандартного оборудования для пищевой промышленности</h2>
       </div>
     </div>
-    <div class="row m-b-80">
-      <div class="col-xl-14 offset-xl-0 col-lg-13 offset-lg-0 col-md-12 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0"></div>
-      <div class="col-xl-7 offset-xl-1 col-lg-8 offset-lg-1 col-md-10 offset-md-0 col-sm-20 offset-sm-2 col-20 offset-2"></div>
+    <div class="row">
+      <div class="col-xl-14 offset-xl-0 col-lg-13 offset-lg-0 col-md-11 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0">
+        <div class="prodNotSt__imgW">
+          <img src="img/prod/5.jpg" alt="">
+        </div>
+      </div>
+      <div class="col-xl-7 offset-xl-1 col-lg-8 offset-lg-1 col-md-10 offset-md-1 col-sm-20 offset-sm-2 col-20 offset-2">
+        <p class="p1 p-b-100">
+          Производство продуктов питания на промышленном уровне состоит из множества сложных процессов, упростить которые может специальное оборудование. Но не всегда стандартной техники достаточно для того, чтобы сделать линии производства эффективными, качественными. Требуются еще и нестандартные виды оборудования, позволяющие завершить организацию процесса изготовления продукции, сделать ее четкой, плановой, производительной.<br><br> Изготовление нестандартного оборудования – направление работы нашей компании ООО «ЗПО», оно позволяет удовлетворить запросы клиентов в специальных видах инвентаря и оборудования.
+
+        </p>
+      </div>
     </div>
-    <div class="row m-b-80">
+    <div class="row p-t-80  p-b-80 prodNotSt__white">
       <div class="col-xl-7 offset-xl-2 col-lg-9 offset-lg-2 col-md-17 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 ">
         <p class="p1">Производство нестандартного оборудования для пищевой промышленности позволяет решить многие сложные задачи:</p>
       </div>
     </div>
-    <div class="row position-relative">
+    <div class="row position-relative prodNotSt__white">
       <div class="col-xl-5 offset-xl-2 col-lg-5 offset-lg-2 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 m-b-40">
         <p class="p1 d-block">01.</p>
         <p class="p1 d-block">Технологические линии и процессы точно адаптируются под потребности производства.</p>
       </div>
       <div class="col-xl-5 offset-xl-2 col-lg-5 offset-lg-2 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 m-b-40">
         <p class="p1 d-block">02.</p>
-        <p class="p1 d-block">На предприятии все процессы становятся механизированными 
+        <p class="p1 d-block">На предприятии все процессы становятся механизированными
           и автоматизированными, это соответствует современным требованиям к любому производству.</p>
       </div>
       <div class="col-24"></div>
       <div class="col-xl-5 offset-xl-2 col-lg-5 offset-lg-2 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 m-b-40 ">
         <p class="p1 d-block">03.</p>
-        <p class="p1 d-block">Сокращается доля ручного труда, сложного и трудоемкого. 
-          Также сокращается время изготовления продукции благодаря продуманному оснащению предприятия, каждого его цеха 
+        <p class="p1 d-block">Сокращается доля ручного труда, сложного и трудоемкого.
+          Также сокращается время изготовления продукции благодаря продуманному оснащению предприятия, каждого его цеха
           или отдела.</p>
       </div>
       <div class="col-xl-5 offset-xl-2 col-lg-5 offset-lg-2 col-md-9 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2 m-b-40">
         <p class="p1 d-block">04.</p>
-        <p class="p1 d-block">Технологические процессы становятся непрерывными, это важно для сохранения свежести 
+        <p class="p1 d-block">Технологические процессы становятся непрерывными, это важно для сохранения свежести
           и вкусовых качеств продукции.</p>
       </div>
     </div>
