--- a/marion/serv.html
+++ b/marion/serv.html
@@ -56,108 +56,124 @@
     </div>
   </header>
   <div class="row p-t-200 m-b-150">
-    <div class="breadcrumb m-b-20" itemscope="" itemtype="http://schema.org/BreadcrumbList"><span itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="https://mapa-group.ru" itemprop="item"><span itemprop="name">Главная</span></a></span><span class="kb_sep"> / </span>
-      <span class="kb_title">Услуги</span>
+    <div class="col-20 offset-2">
+      <div class="breadcrumb m-b-20" itemscope="" itemtype="http://schema.org/BreadcrumbList"><span itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="https://mapa-group.ru" itemprop="item"><span itemprop="name">Главная</span></a></span><span class="kb_sep"> / </span>
+        <span class="kb_title">Услуги</span>
+      </div>
+      <h1 class="h2">Услуги</h1>
     </div>
-    <h1 class="h2">Услуги</h1>
   </div>
   <section class="serv1">
-    <div class="row ">
+    <div class="row m-b-80">
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-2 offset-md-2 col-sm-16 offset-sm-2 col-16 offset-2">
         <span class="h3">01.</span>
       </div>
       <div class="col-xl-8 offset-xl-0 col-lg-8 offset-lg-0 col-md-14 offset-md-0 col-sm-16 offset-sm-2 col-16 offset-2">
-        <h3 class="h3">Автоматизация технологических процессов</h3>
-        <p class="p1 p-b-80">Автоматизация технологических процессов 
-          и научно-технический прогресс неразрывно связаны друг с другом. В подавляющем большинстве современного технологического оборудования применяется, как минимум не глубокая локальная автоматизация, избавляющая оператора 
-          от однообразной монотонной работы и позволяющая облегчить труд 
+        <h3 class="h3 ttu p-b-40">Автоматизация технологических процессов</h3>
+        <p class="p1 p-b-80">Автоматизация технологических процессов
+          и научно-технический прогресс неразрывно связаны друг с другом. В подавляющем большинстве современного технологического оборудования применяется, как минимум не глубокая локальная автоматизация, избавляющая оператора
+          от однообразной монотонной работы и позволяющая облегчить труд
           и снизить влияние человеческого фактора. Например, тривиальные терморегуляторы управляющие: нагревом, охлаждение, поддержанием температуры.<br><br>В более сложных машинах осуществляющих формование, упаковку, необходим контроль сотен дискретных и аналоговых параметров и степень их автоматизации их гораздо выше хоть и продолжает носить локальный характер.</p>
-        <img src="" alt="" class="w-100">    
+        <img class="w-100 d-none d-lg-block " src="img/serv/1.jpg" alt="">
+
       </div>
       <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-24 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0">
-        <img src="" alt="">
+        <div class="serv1__imgW">
+          <img  src="img/serv/2.jpg" alt="">
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-20 offset-sm-2 col-20 offset-2 p-b-80">
         <p class="p1">
-          В современном мире рыночных отношений высокую конкурентную способность могут дать ускорение производственных процессов и еще большее уменьшение человеческого фактора для увеличения качества выходного продукта посредством лучшего соблюдения рецептур технологического процесса и ускорения стадии обработки.<br><br>Современные средства автоматизации позволяют исключить человеческих труд из практически всех стадий технологического процесса, исключая тем самым человеческий фактор и улучшая качество продукции. 
+          В современном мире рыночных отношений высокую конкурентную способность могут дать ускорение производственных процессов и еще большее уменьшение человеческого фактора для увеличения качества выходного продукта посредством лучшего соблюдения рецептур технологического процесса и ускорения стадии обработки.<br><br>Современные средства автоматизации позволяют исключить человеческих труд из практически всех стадий технологического процесса, исключая тем самым человеческий фактор и улучшая качество продукции.
         </p>
       </div>
-      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-24 offset-sm-0 col-24 offset-0 p-b-80">
+      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-20 offset-sm-2 col-20 offset-2 p-b-80">
         <p class="p1">
-          Локальные и распределенные системы контролируют работу отдельных машин и взаимосвязь их между собой, а SCADA и MES системы высокого уровня контролируют работу всей производственной линии от входа сырья 
-          до выхода окончательного продукта и ведут всеобъемлющий объем сырьевых и расходных материалов и окончательной продукции.  
-          <br><br>Наша фирма предлагает услуги по автоматизации технологических процессов на производстве от модернизации отдельных машин, установок 
-          и оптимизации их работы до автоматизации всей производственной линии 
+          Локальные и распределенные системы контролируют работу отдельных машин и взаимосвязь их между собой, а SCADA и MES системы высокого уровня контролируют работу всей производственной линии от входа сырья
+          до выхода окончательного продукта и ведут всеобъемлющий объем сырьевых и расходных материалов и окончательной продукции.
+          <br><br>Наша фирма предлагает услуги по автоматизации технологических процессов на производстве от модернизации отдельных машин, установок
+          и оптимизации их работы до автоматизации всей производственной линии
           в единую систему производства и переработки.
         </p>
       </div>
-      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-20 offset-sm-2 col-20 offset-2">
-        <img src="" alt="" class="w-100">
-      </div>
       <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-24 offset-sm-0 col-24 offset-0">
-        <img src="" alt="" class="w-100">
+        <img src="img/serv/3.jpg" alt="" class="w-100">
+      </div>
+      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-24 offset-sm-0 col-24 offset-0 d-none d-lg-block">
+        <img src="img/serv/4.jpg" alt="" class="w-100 ">
       </div>
     </div>
   </section>
   <section class="serv2 p-t-150">
-    <div class="row ">
+    <div class="row">
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-2 offset-md-2 col-sm-16 offset-sm-2 col-16 offset-2">
         <span class="h3">02.</span>
       </div>
-      <div class="col-xl-8 offset-xl-0 col-lg-8 offset-lg-0 col-md-14 offset-md-0 col-sm-16 offset-sm-0 col-16 offset-0">
-        <h3 class="h3">МОНТАЖНЫЕ РАБОТЫ</h3>
-        <p class="p1 p-b-20">Компания «ЗПО» производит профессиональный монтаж трубопроводов для предприятий пищевой промышленности. От качества этой работы зависит безопасность пищевого производства, надежность работы технологических линий. Монтаж пищевых трубопроводов выполняют опытные специалисты, владеющие современными технологиями и инструментом. Они проходят квалификационную аттестацию на самых передовых предприятиях страны. Также сотрудничество с компанией имеет и другие преимущества.</p>
-        <img src="" alt="" class="w-100">    
+      <div class="col-xl-8 offset-xl-0 col-lg-8 offset-lg-0 col-md-14 offset-md-0 col-sm-20 offset-sm-2 col-20 offset-2">
+        <h3 class="h3 p-b-40">МОНТАЖНЫЕ РАБОТЫ</h3>
       </div>
-      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-24 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0">
+    </div>
+    <div class="row ">
+      <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-2 offset-md-2 col-sm-16 offset-sm-2 col-16 offset-2">
+      </div>
+      <div class="col-xl-8 offset-xl-0 col-lg-8 offset-lg-0 col-md-14 offset-md-0 col-sm-20 offset-sm-2 col-20 offset-2">
+        <p class="p1 p-b-20">Компания «ЗПО» производит профессиональный монтаж трубопроводов для предприятий пищевой промышленности. От качества этой работы зависит безопасность пищевого производства, надежность работы технологических линий. Монтаж пищевых трубопроводов выполняют опытные специалисты, владеющие современными технологиями и инструментом. Они проходят квалификационную аттестацию на самых передовых предприятиях страны. Также сотрудничество с компанией имеет и другие преимущества.</p>
+      </div>
+      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-20 offset-sm-2 col-20 offset-2">
         <p class="p1 p-b-80">Независимо от места проведения и объема работ, монтаж трубопроводов из нержавеющей стали всегда проводится с соблюдением правил безопасности. Специалисты ответственно относятся к имуществу заказчика, бережно устанавливают трубы, трубную и запорную арматуру. Они обеспечены и всеми средствами индивидуальной защиты — спецодеждой, защитными масками, очками, страховочными поясами и другим.</p>
       </div>
     </div>
-    <div class="row">
+    <div class="row position-relative z-5">
       <div class="col-lg-19 offset-lg-3 col-24 offset-0">
         <div class="serv2__img">
-          <img src="" alt="">
+          <img class="w-100" src="img/serv/5.jpg" alt="">
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-16 offset-sm-2 col-16 offset-2">
+    <div class="row serv2__white p-t-80 p-b-40">
+      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-20 offset-sm-2 col-20 offset-2">
         <div class="list">
           <p class="p1 list__item">для монтажа труб специалисты применяют прогрессивные технологии и оборудование, которые соответствуют всем требованиям пищевой промышленности</p>
           <p class="p1 list__item">сварочные работы проводятся с применением сварочных аппаратов типа TIG, труборезов «GF+», набором кольцевых пил для работы с нержавеющей сталью. Также в наличии и другие современные инструменты, обеспечивающие высокое качество и оперативность работы</p>
-        </div>  
+        </div>
       </div>
-      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-24 offset-md-4 col-sm-24 offset-sm-2 col-24 offset-2">
+      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-20 offset-sm-2 col-20 offset-2">
         <div class="list">
           <p class="p1 list__item">компания обеспечивает своих специалистов и необходимым оснащением для проведения монтажа — приспособлениями для такелажных работ, строительными лесами, лестницами.</p>
           <p class="p1 list__item">пищевые трубопроводы имеют свои особенности, их монтаж проводится с учетом достаточно строгих требований к соблюдению санитарно-гигиенических нормативов.</p>
-        </div> 
+        </div>
       </div>
     </div>
   </section>
-  <section class="serv3">
+  <section class="serv3 p-t-100 p-b-150">
     <div class="row">
-      <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-2 offset-md-2 col-sm-16 offset-sm-2 col-16 offset-2">
+      <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-2 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
         <span class="h3">03.</span>
       </div>
-      <div class="col-xl-8 offset-xl-0 col-lg-8 offset-lg-0 col-md-14 offset-md-4 col-sm-16 offset-sm-0 col-16 offset-0">
-        <h3 class="h3">ремонт цистерн</h3>
+      <div class="col-xl-8 offset-xl-0 col-lg-8 offset-lg-0 col-md-14 offset-md-0 col-sm-20 offset-sm-2 col-20 offset-2">
+        <h3 class="h3 ttu p-b-40">ремонт цистерн</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-2 offset-md-2 col-sm-20 offset-sm-2 col-20 offset-2">
+      </div>
+      <div class="col-xl-8 offset-xl-0 col-lg-8 offset-lg-0 col-md-14 offset-md-0 col-sm-20 offset-sm-2 col-20 offset-2">
         <p class="p1 p-b-20">
           Из всех сервисных работ по прицепным транспортным средствам, ремонты автоцистерн стоят особняком, обладая рядом присущих только им особенностей и нюансов.В отличии от кузовных прицепов и полуприцепов, автоцистерны имеют герметичную колбу, закрепленную на авто-шасси и предназначенную для загрузки, перевозки и выгрузки материалов определенного типа.<br><br>
 В связи с тем, что существует огромное количество видов материалов, перевозимых в автоцистернах и эти материалы обладают отличающимися друг от друга свойствами, автоцистерны для перевозки разных материалов, так же имеют конструктивные особенности, порой достаточно существенные, отличающие друг от друга автоцистерны, предназначенные для перевозки материалов разных типов.
-        </p> 
+        </p>
       </div>
-      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-24 offset-md-4 col-sm-24 offset-sm-4 col-24 offset-0">
-        <p class="p1 p-b-80">В результате таких особенностей автоцистерны принято подразделять 
+      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-20 offset-sm-2 col-20 offset-2">
+        <p class="p1 p-b-80">В результате таких особенностей автоцистерны принято подразделять
           по категориям в зависимости от вида перевозимых материалов, давая им соответствующие названия. Именно поэтому на рынке присутствуют такие автоцистерны, как: цементовозы, муковозы, комбикормовозы, бензовозы, водовозы, молоковозы, битумовозы и многие другие.</p>
       </div>
       <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-24 offset-sm-0 col-24 offset-0">
-        <img src="" alt="" class="w-100">    
+        <img src="img/serv/6.jpg" alt="" class="w-100">
       </div>
-      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-24 offset-md-4 col-sm-24 offset-sm-0 col-24 offset-0">
-        <img src="" alt="" class="w-100">  
+      <div class="col-xl-8 offset-xl-3 col-lg-8 offset-lg-3 col-md-14 offset-md-4 col-sm-24 offset-sm-0 col-24 offset-0 d-none d-lg-block">
+        <img src="img/serv/7.jpg" alt="" class="w-100">
       </div>
     </div>
   </section>
