--- a/standart/proj.html
+++ b/standart/proj.html
@@ -8,212 +8,245 @@
     <title>Standart</title>
   </head>
   <body>
-    <div class="rFirst p-t-200 m-b-200">
-      <div class="rFirst__bg d-none d-lg-block"></div>
+    <div class="prFirst p-t-200 m-b-200">
       <div class="row">
         <div
-          class="col-xl-12 offset-xl-6 col-lg-12 offset-lg-4 col-md-18 offset-md-4 col-18 offset-1"
+          class="col-xl-16 offset-xl-4 col-lg-16 offset-lg-4 col-md-18 offset-md-4 col-22 offset-1"
         >
-          <h1 class="h2">ремонтная зона -</h1>
+          <h1 class="h2">все наши проекты - </h1>
         </div>
         <div
-          class="col-xl-12 offset-xl-1 col-lg-12 offset-lg-1 col-md-18 offset-md-1 col-18 offset-1"
+          class="col-xl-16 offset-xl-1 col-lg-16 offset-lg-1 col-md-18 offset-md-1 col-22 offset-1"
         >
-          <h5 class="h2">комплексная</h5>
+          <h5 class="h2">выполнены качественно и точно в срок</h5>
         </div>
-        <div
-          class="col-xl-12 offset-xl-3 col-lg-14 offset-lg-3 col-md-18 offset-md-3 col-18 offset-1 m-b-100"
-        >
-          <h5 class="h2">система обслуживания техники</h5>
-        </div>
-        <div
-          class="col-xl-3 offset-xl-9 col-lg-3 offset-lg-9 col-md-5 offset-md-8 col-8 offset-1"
-        >
-          <p class="p1 d-block">Аренда территории</p>
-          <p class="p1 d-block">Стоянка</p>
-          <p class="p1 d-block">Ремонт и техническое обслуживание</p>
-        </div>
-        <div
-          class="col-xl-2 offset-xl-1 col-lg-3 offset-lg-1 col-md-5 offset-md-1 col-8 offset-1"
-        >
-          <p class="p1">д. Большие Колпаны 53-й километр Киевского шоссе</p>
-        </div>
-        <div
-          class="col-xl-4 offset-xl-13 col-lg-5 offset-lg-13 col-md-7 offset-md-14 col-10 offset-10"
-        >
-          <div class="d-flex align-items-end justify-content-between">
-            <a class="p1 mp0" href="tel:+78123208404">+7 (812) 320-84-04</a>
-            <svg
-              class="d-none d-md-block"
-              width="25"
-              height="25"
-              viewBox="0 0 25 25"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path d="M24.9998 0V25H0L24.9998 0Z" fill="#363636" />
+      </div>
+    </div>
+
+    <div class="prBody">
+      <div class="prBody__item d-none d-md-block"></div>
+
+      <div class="prBody__item prBody__item_big">
+        <div class="">
+          <img src="img/proj/1.jpg" alt="" class="prBody__img">
+          <div class="position-relative z-1">
+            <p class="prBody__textTop h5 mp0 ">ООО «ПО «Электромашина»</p>
+          </div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 "></p>
+            <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 0V25H0.000244141L25 0Z"/>
             </svg>
           </div>
         </div>
       </div>
+
+      <div class="prBody__item d-none d-lg-block"></div>
+
+      <div class="prBody__item prBody__item_circle prBody__item_black">
+        <div class="">
+          <!-- <img src="" alt="" class="prBody__img"> -->
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 text-center">ООО «ПО «Электромашина»</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item d-none d-md-block"></div>
+
+      <div class="prBody__item ">
+        <div class="">
+          <img src="img/proj/2.jpg" alt="" class="prBody__img">
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 prBody__textBottom">ООО «ПО «Электромашина»</p>
+            <svg class="prBody__svg_orange" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 0V25H0.000244141L25 0Z"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item d-none d-md-block d-lg-none"></div>
+
+      <div class="prBody__item prBody__item_orange ">
+        <div class="">
+          <!-- <img src="" alt="" class="prBody__img"> -->
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 ">ООО «ПО «Электромашина»</p>
+            <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 0V25H0.000244141L25 0Z"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item d-none d-md-block"></div>
+
+      <div class="prBody__item prBody__item_gray ">
+        <div class="">
+          <!-- <img src="" alt="" class="prBody__img"> -->
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 ">ООО «ПО «Электромашина»</p>
+            <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 0V25H0.000244141L25 0Z"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item d-none d-md-block"></div>
+
+      <div class="prBody__item d-none d-md-block"></div>
+
+      <div class="prBody__item d-none d-lg-block"></div>
+
+      <div class="prBody__item prBody__item_circle prBody__item_black ">
+        <div class="">
+          <img src="img/proj/3.jpg" alt="" class="prBody__img">
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 text-center">ООО «ПО «Электромашина»</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item  prBody__item_black ">
+        <div class="">
+          <img src="img/proj/4.jpg" alt="" class="prBody__img">
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 ">ООО «ПО «Электромашина»</p>
+            <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 0V25H0.000244141L25 0Z"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item prBody__item_circle prBody__item_white prBody__item_border ">
+        <div class="">
+          <!-- <img src="" alt="" class="prBody__img"> -->
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 text-center">ООО «ПО «Электромашина»</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item prBody__item_orange ">
+        <div class="">
+          <!-- <img src="" alt="" class="prBody__img"> -->
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 ">ООО «ПО «Электромашина»</p>
+            <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 0V25H0.000244141L25 0Z"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item d-none d-md-block"></div>
+
+      <div class="prBody__item d-none d-lg-block"></div>
+
+      <div class="prBody__item prBody__item_gray ">
+        <div class="">
+          <img src="img/proj/5.jpg" alt="" class="prBody__img">
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 prBody__textBottom">ООО «ПО «Электромашина»</p>
+            <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 0V25H0.000244141L25 0Z"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item d-none d-md-block d-lg-none"></div>
+
+
+      <div class="prBody__item prBody__item_black ">
+        <div class="">
+          <img src="img/proj/6.jpg" alt="" class="prBody__img">
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 ">ООО «ПО «Электромашина»</p>
+            <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 0V25H0.000244141L25 0Z"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item d-none d-md-block"></div>
+
+      <div class="prBody__item prBody__item_black ">
+        <div class="">
+          <!-- <img src="" alt="" class="prBody__img"> -->
+          <div class="position-relative z-1">
+            <p class="h5 mp0 prBody__textTop prBody__textTop_black">ООО «ПО «Электромашина»</p>
+          </div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 "></p>
+            <svg class="prBody__svg_orange" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 0V25H0.000244141L25 0Z"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item d-none d-md-block"></div>
+      <!-- <div class="prBody__item d-none d-md-block"></div>
+
+      <div class="prBody__item"></div>
+
+      <div class="prBody__item prBody__item_big">
+        <div class="">
+          <img src="" alt="" class="prBody__img">
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 ">ООО «ПО «Электромашина»</p>
+            <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 0V25H0.000244141L25 0Z"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="prBody__item"></div>
+
+      <div class="prBody__item prBody__item_circle prBody__item_black">
+        <div class="">
+          <img src="" alt="" class="prBody__img">
+          <div class=""></div>
+          <div class="prBody__itemText">
+            <p class="h5 mp0 text-center">ООО «ПО «Электромашина»</p>
+          </div>
+        </div>
+      </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
-    <div class="rImages">
-      <div class="row rImages__row1">
-        <div
-          class="col-xl-15 offset-xl-0 col-lg-14 offset-lg-0 col-md-24 offset-md-0 col-24 offset-0"
-        >
-          <div class="rImages__img1"></div>
-        </div>
-        <div
-          class="col-xl-7 offset-xl-0 col-lg-8 offset-lg-0 col-md-7 offset-md-0 col-10 offset-0 d-none d-lg-block"
-        ></div>
-        <div
-          class="col-xl-2 offset-xl-0 col-lg-2 offset-lg-0 col-md-7 offset-md-0 col-10 offset-0 d-none d-lg-block"
-        >
-          <div class="rImages__img2"></div>
-        </div>
-      </div>
-      <div class="row rImages__row2">
-        <div
-          class="col-xl-15 offset-xl-0 col-lg-14 offset-lg-0 col-md-24 offset-md-0 col-24 offset-0"
-        >
-          <div class="d-flex h-100 align-items-end justify-content-center">
-            <span class="num2 orange text-center d-block"
-              >26&nbsp;569<span class="h2 orange">кв.м</span></span
-            >
-          </div>
-        </div>
-        <div
-          class="col-xl-7 offset-xl-0 col-lg-8 offset-lg-0 col-md-7 offset-md-0 col-10 offset-0 d-none d-lg-block"
-        >
-          <div class="rImages__img3"></div>
-        </div>
-        <div
-          class="col-xl-2 offset-xl-0 col-lg-2 offset-lg-0 col-md-7 offset-md-0 col-10 offset-0 d-none d-lg-block"
-        ></div>
-      </div>
-      <div class="row m-t-60 m-b-200">
-        <div
-          class="col-xl-6 offset-xl-15 col-lg-8 offset-lg-14 col-md-14 offset-md-1 col-22 offset-1"
-        >
-          <p class="p1">
-            Спецтехника для работы со строительными материалами нуждается в
-            регулярном ремонте и обслуживании. Мы разработали комплексную
-            систему обслуживания. Помогаем содержать, чинить, проводить
-            профилактику поломок и держать ваше оборудование в одном месте.<br /><br />
-            В нашей ремонтной зоне можно починить технику и пройти техническое
-            обслуживание. Для вас работает охраняемая стоянка, автомойка.
-            Предоставляем в аренду площади для осуществления необходимых работ и
-            размещения бытовых объектов. Здесь вы можете купить сыпучие
-            строительные материалы. Все для идеальной работы вашего оборудования
-            в одном месте.
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div
-          class="col-xl-12 offset-xl-0 col-lg-12 offset-lg-0 col-md-24 offset-md-0 col-24 offset-0 rImages__col"
-        >
-          <div class="row">
-            <div
-              class="col-xl-17 offset-xl-2 col-lg-19 offset-lg-2 col-md-18 offset-md-1 col-22 offset-1"
-            >
-              <p class="h5">
-                Ремзона расположена в д. Большие Колпаны (Гатчинский район
-                Ленобласти), на 53-м километре Киевского шоссе.
-              </p>
-            </div>
-          </div>
-          <img class="w-100" src="img/rem/4.jpg" alt="" />
-        </div>
-        <div
-          class="col-xl-12 offset-xl-0 col-lg-12 offset-lg-0 col-md-24 offset-md-0 col-24 offset-0"
-        >
-          <img src="img/rem/5.jpg" alt="" class="w-100" />
-        </div>
-      </div>
-    </div>
-    <div class="rServ p-t-80">
-      <div class="row p-b-200">
-        <div
-          class="col-xl-11 offset-xl-1 col-lg-11 offset-lg-1 col-md-17 offset-md-1 col-22 offset-1"
-        >
-          <p class="h3">
-            Услуги ремонтной зоны - здесь вы можете поставить технику на ремонт
-            и техническое обслуживание, воспользоваться услугами стоянки,
-            автомойки, аренды площади необходимую для осуществления работ и
-            размещения бытовых объектов и купить сыпучие строительные материалы.
-          </p>
-        </div>
-        <div
-          class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-1 col-md-24 offset-md-0 col-24 offset-0 d-none d-lg-block"
-        >
-          <p class="p1 text-right d-block">01. Аренда территории;</p>
-          <p class="p1 text-right d-block">
-            02. Круглосуточная охраняемая стоянка;
-          </p>
-          <p class="p1 text-right d-block">
-            03. Ремонт и техническое обслуживание.
-          </p>
-        </div>
-      </div>
-      <div class="">
-        <div class="rServ__wrap">
-          <div class="rServ__item rServ__item_1">
-            <div class="">
-              <div class=""></div>
-              <div class="rServ__itemText">
-                <p class="h5 mp0 ttu">Аренда территории</p>
-                <svg
-                  width="25"
-                  height="25"
-                  viewBox="0 0 25 25"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path d="M25 0V25H0L25 0Z"  />
-                </svg>
-              </div>
-            </div>
-          </div>
-          <div class="rServ__item rServ__item_2">
-            <div class="">
-              <div class=""></div>
-              <div class="rServ__itemText">
-                <p class="h5 mp0 ttu">Аренда территории</p>
-                <svg
-                  width="25"
-                  height="25"
-                  viewBox="0 0 25 25"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path d="M25 0V25H0L25 0Z"  />
-                </svg>
-              </div>
-            </div>
-          </div>
-          <div class="rServ__item rServ__item_3">
-            <div class="">
-              <div class=""></div>
-              <div class="rServ__itemText">
-                <p class="h5 mp0 ttu">РЕМОНТ И ТЕХНИЧЕСКОЕ ОБСЛУЖИВАНИЕ</p>
-                <svg
-                  width="25"
-                  height="25"
-                  viewBox="0 0 25 25"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path d="M25 0V25H0L25 0Z"  />
-                </svg>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <section class="form form_white p-t-160 p-b-100">
+
+    <section class="form p-t-160 p-b-100">
       <div class="row m-b-160">
         <div class="col-xl-5 offset-xl-9 col-lg-7 offset-lg-9 col-md-13 offset-md-1 col-22 offset-1 m-b-80">
           <p class="p1">Менеджеры компании с радостью ответят на ваши вопросы и произведут расчет стоимости услуг и подготовят индивидуальное коммерческое предложение.</p>
@@ -232,9 +265,9 @@
         </div>
       </div>
     </section>
-    <img class="w-100 m-b-200" src="img/about/logoBW.svg" alt="">
+    <img class="w-100" src="img/about/logoBW.svg" alt="">
 
-    <div class="cont p-t-160 p-b-200">
+    <div class="cont cont_white p-t-160 p-b-200">
       <div class="row">
         <div
           class="col-xl-8 offset-xl-1 col-lg-10 offset-lg-1 col-md-16 offset-md-1 col-22 offset-1"
